[package]
name = "tract-ffi"
version = "0.21.4-pre"
license = "MIT OR Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, neural network inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks" ]
categories = [ "science" ]
autobenches = false
edition = "2021"
include = [ "Cargo.toml", "src/**/*.rs", "LICENSE*" ]

[lib]
name = "tract"
crate-type = ["staticlib"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
tokenizers.workspace = true
clap_builder = { version = "4.4" }
anyhow.workspace = true
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
tract-api = { path = ".." , version = "=0.21.4-pre" }
tract-rs = { path = "../rs" , version = "=0.21.4-pre" }
tract-core = { path = "../../core" , version = "=0.21.4-pre" }
tract-onnx = { path = "../../onnx" , version = "=0.21.4-pre" }