[package]
name = "tract-proxy"
version = "0.20.18"
license = "MIT OR Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/sonos/tract"
keywords = [ "NeuralNetworks" ]
categories = [ "science" ]
autobenches = false
edition = "2021"
rust-version = "1.65"
include = [ "Cargo.toml", "src/**/*.rs", "LICENSE*" ]

[dependencies]
anyhow.workspace = true
boow.workspace = true
ndarray.workspace = true
tract-api = { path = ".." , version = "=0.20.18" }
tract-proxy-sys = { path = "sys", version = "=0.20.18" }

[dev-dependencies]
reqwest.workspace = true
tempfile.workspace = true
serde_json.workspace = true
