[package]
name = "tract-proxy"
version = "0.21.13"
license = "MIT OR Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/sonos/tract"
keywords = [ "NeuralNetworks" ]
categories = [ "science" ]
autobenches = false
edition = "2021"
rust-version = "1.75"
include = [ "Cargo.toml", "src/**/*.rs", "LICENSE*" ]

[dependencies]
anyhow.workspace = true
boow.workspace = true
home.workspace = true
ndarray.workspace = true
tract-api.workspace = true
tract-proxy-sys.workspace = true

[dev-dependencies]
reqwest.workspace = true
tempfile.workspace = true
serde_json.workspace = true
