[build-system]
requires = [
    "setuptools >=80, <81",
    "setuptools_rust >=1.12, <1.13",
    "wheel >=0.46, <0.47",
    "toml >=0.10, <0.11"
]

[tool.cibuildwheel]
build-frontend = "build[uv]"
environment = "PATH=$PATH:$HOME/.cargo/bin"
test-requires = "pytest"
test-command = """pytest {project}"""

[tool.cibuildwheel.linux]
skip = "*i686 cp???t-*"
before-build = """
set -ex
uv pip install --system "numpy>=2,<3" --config-settings=setup-args="-Dallow-noblas=true"
cargo --version || (curl https://sh.rustup.rs -sSf | sh -s -- -y --profile minimal
. $HOME/.cargo/env
rustup toolchain add stable
rustup default stable)
[ -e $HOME/.local/bin/sccache ] || ./.travis/setup-sccache.sh ]
"""
environment = """
PATH=$HOME/.local/bin:$HOME/.cargo/bin:$PATH
SCCACHE_DIR=$HOME/.cache/sccache
SCCACHE_CACHE_SIZE=2G
RUSTC_WRAPPER=sccache
"""

[tool.cibuildwheel.macos]
archs = "x86_64 universal2 arm64"
skip = "pp* cp???t-*"
before-build = """
uv pip install --system "numpy>=2,<3" --config-settings=setup-args="-Dallow-noblas=true"
rustup target add aarch64-apple-darwin
[ -e $HOME/.local/bin/sccache ] || ./.travis/setup-sccache.sh ]
"""

[tool.cibuildwheel.windows]
before-build = """
choco install mingw --version=8.1.0
uv pip install --system "numpy==1.25.2"
"""
skip = "*-win32 pp* cp???t*"
