[package]
name = "tract-rs"
version = "0.21.13"
license = "MIT OR Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/sonos/tract"
keywords = [ "NeuralNetworks" ]
categories = [ "science" ]
autobenches = false
edition = "2021"
rust-version = "1.75"
include = [ "Cargo.toml", "src/**/*.rs", "LICENSE*", "tests" ]

[dependencies]
anyhow.workspace = true
boow.workspace = true
flate2.workspace = true
half.workspace = true
icu_normalizer.workspace = true
icu_properties.workspace = true
ndarray.workspace = true
tract-api.workspace = true
tract-nnef.workspace = true
tract-onnx-opl.workspace = true
tract-onnx.workspace = true
tract-extra.workspace = true
tract-pulse.workspace = true
tract-libcli.workspace = true
tract-transformers.workspace = true
serde_json.workspace = true

[dev-dependencies]
reqwest.workspace = true
tempfile.workspace = true
serde_json.workspace = true

[features]
complex = []
# default = [ "dylib" ]
# dylib = []
# staticlib = []
