[package]
name = "tract"
version = "0.23.0-pre"
license = "MIT OR Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/sonos/tract"
keywords = ["NeuralNetworks"]
categories = ["science"]
autobenches = false
edition = "2024"
rust-version.workspace = true
include = ["Cargo.toml", "src/**/*.rs", "LICENSE*", "tests"]

[dependencies]
anyhow.workspace = true
boow.workspace = true
erased-serde.workspace = true
flate2.workspace = true
half.workspace = true
icu_normalizer.workspace = true
icu_properties.workspace = true
tract-api.workspace = true
tract-nnef.workspace = true
tract-onnx-opl.workspace = true
tract-onnx.workspace = true
tract-extra.workspace = true
tract-pulse.workspace = true
tract-libcli.workspace = true
tract-transformers.workspace = true
serde_json.workspace = true

[target.'cfg(any(target_vendor = "apple"))'.dependencies]
tract-metal.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
tract-cuda = { workspace = true, default-features = false }


[dev-dependencies]
reqwest.workspace = true
rustls.workspace = true
tempfile.workspace = true
serde_json.workspace = true

[features]
default = ["cuda-13000"]
complex = []
# default = [ "dylib" ]
# dylib = []
# staticlib = []

# CUDA driver-API selectors (linux/windows targets only). Pass-through to
# tract-cuda. Exactly one must be active; the default pulls cuda-13000.
cuda-12000 = ["tract-cuda/cuda-12000"]
cuda-12010 = ["tract-cuda/cuda-12010"]
cuda-12020 = ["tract-cuda/cuda-12020"]
cuda-12030 = ["tract-cuda/cuda-12030"]
cuda-12040 = ["tract-cuda/cuda-12040"]
cuda-12050 = ["tract-cuda/cuda-12050"]
cuda-12060 = ["tract-cuda/cuda-12060"]
cuda-12080 = ["tract-cuda/cuda-12080"]
cuda-12090 = ["tract-cuda/cuda-12090"]
cuda-13000 = ["tract-cuda/cuda-13000"]
cuda-13010 = ["tract-cuda/cuda-13010"]
cuda-13020 = ["tract-cuda/cuda-13020"]
