[package]
name = "tract-ci-minion"
version = "0.1.0"
edition = "2018"

[workspace]
members = []

[dependencies]
dirs = "3"
fs2 = "0"
rust-s3 = { version = "0.26.4", default-features = false, features = [ "rustls-tls" ] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
anyhow = "1.0.42"
log = "0.4.14"
env_logger = "0.9.0"
pipe = "0.4.0"
flate2 = "1.0.20"
tar = "0.4.35"
