[package]
name = "tract-ci-minion"
version = "0.20.7-pre"
edition = "2021"

[workspace]
members = []

[dependencies]
dirs = "3"
fs2 = "0"
rust-s3 = { version = "0.26.4", default-features = false, features = [ "rustls-tls" ] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
anyhow = "1.0.42"
log = "0.4.14"
env_logger = "0.9.0"
pipe = "0.4.0"
flate2 = "1.0.20"
tar = "0.4.35"
daemonize = "0.5"
libc = "0.2.119"
wait-timeout = "0.2.0"
lazy_static = "1.4.0"
simple-signal = "1"
